--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title> Výpočet obvodu kružnice </title>
 </head>
 <body>
-    
+	<h1> Výpočet obvodu kružnice </h1>
+	<p>Zadejte poloměr kružnice:</p>
+	<input type="number" id="radius">
+	<button onclick="calculate()">Vypočítat</button>
+	<p id="result"></p>
+	<script>
+		function calculate() {
+			const radius = document.getElementById("radius").value;
+			const circumference = 2 * Math.PI * radius;
+			document.getElementById("result").innerHTML = `Obvod kružnice je ${circumference.toFixed(2)}.`;
+		}
+	</script>
 </body>
 </html>
