--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			const circumference = 2 * Math.PI * radius;
 			document.getElementById("result").innerHTML = `Obvod kružnice je ${circumference.toFixed(2)}.`;
 		}
-	</script>
+</script>
 </body>
 </html>
+<h1><img src="1200px-Kruh-1.svg.png" width="20%"></h1> 
