--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			document.getElementById("result").innerHTML = `Obvod kružnice je ${circumference.toFixed(2)}.`;
 		}
 </script>
+<button onclick="check()">Zkontrolovat</button>
+<a href="podstranka.html">Help</a>
 </body>
 </html>
-<h1><img src="1200px-Kruh-1.svg.png" width="20%"></h1> 
+<h1><img src="KRUŽNICE.png" width="100%"></h1> 
